--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <title>summary_LFO-mentorchallenge</title>
 </head>
 <body>
-    
+    <main class="container">
+        <div class="left">
+            <h3>Your Result</h3>
+            <div>
+                <p>76</p>
+                <p>of 100</p>
+            </div>
+            <h2>Great</h2>
+            <p>You scored higher than 65% of the people who have taken these tests.</p>
+        </div>
+        <div class="right">
+            <h1>Summary</h1>
+            <div class="skills">
+                <img src="icons/icon-reaction.svg" alt="reaction">
+                <p>Reaction</p>
+                <p>80 / 100</p>
+            </div>
+            <div class="skills">
+                <img src="icons/icon-memory.svg" alt="memory">
+                <p>Memory</p>
+                <p>92 / 100</p>
+            </div>
+            <div class="skills">
+                <img src="icons/icon-verbal.svg" alt="verbal">
+                <p>Verbal</p>
+                <p>61 / 100</p>
+            </div>
+            <div class="skills">
+                <img src="icons/icon-visual.svg" alt="Visual">
+                <p>Visual</p>
+                <p>72 / 100</p>
+            </div>
+            <button>Continue</button>
+        </div>
+    </main>
 </body>
 </html>
