--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <main class="container">
         <div class="left">
-            <h3>Your Result</h3>
-            <div>
-                <p>76</p>
-                <p>of 100</p>
+            <h3 class="tam">Your Result</h3>
+            <div class="circle">
+                <p class="result">76</p>
+                <p class="tam">of 100</p>
             </div>
             <h2>Great</h2>
-            <p>You scored higher than 65% of the people who have taken these tests.</p>
+            <p class="tam">You scored higher than 65% of the people who have taken these tests.</p>
         </div>
         <div class="right">
             <h1>Summary</h1>
