right part update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>summary_LFO-mentorchallenge</title>
 </head>
+
 <body>
     <main class="container">
         <div class="left">
@@ -19,29 +21,38 @@
             <p class="tam">You scored higher than 65% of the people who have taken these tests.</p>
         </div>
         <div class="right">
-            <h1>Summary</h1>
-            <div class="skills">
-                <img src="icons/icon-reaction.svg" alt="reaction">
-                <p>Reaction</p>
-                <p>80 / 100</p>
+            <h1 class="title_right">Summary</h1>
+            <div class="skills reaction">
+                <div class="title_skills">
+                    <img src="icons/icon-reaction.svg" alt="reaction">
+                    <p class="reaction_title">Reaction</p>
+                </div>
+                <p> <b>80</b>  / 100</p>
             </div>
-            <div class="skills">
-                <img src="icons/icon-memory.svg" alt="memory">
-                <p>Memory</p>
-                <p>92 / 100</p>
+            <div class="skills memory">
+                <div class="title_skills">
+                    <img src="icons/icon-memory.svg" alt="memory">
+                    <p class="memory_title">Memory</p>
+                </div>
+                <p><b>92</b>  / 100</p>
             </div>
-            <div class="skills">
-                <img src="icons/icon-verbal.svg" alt="verbal">
-                <p>Verbal</p>
-                <p>61 / 100</p>
+            <div class="skills verbal">
+                <div class="title_skills">
+                    <img src="icons/icon-verbal.svg" alt="verbal">
+                    <p class="verbal_title">Verbal</p>
+                </div>
+                <p><b>61</b>  / 100</p>
             </div>
-            <div class="skills">
-                <img src="icons/icon-visual.svg" alt="Visual">
-                <p>Visual</p>
-                <p>72 / 100</p>
+            <div class="skills visual">
+                <div class="title_skills">
+                    <img src="icons/icon-visual.svg" alt="Visual">
+                    <p class="visual_title">Visual</p>
+                </div>
+                <p><b>72</b>  / 100</p>
             </div>
             <button>Continue</button>
         </div>
     </main>
 </body>
+
 </html>
