--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="index.js"></script>
     <title>summary_LFO-mentorchallenge</title>
 </head>
 
@@ -27,7 +28,7 @@
                     <img src="icons/icon-reaction.svg" alt="reaction">
                     <p class="reaction_title">Reaction</p>
                 </div>
-                <p> <b>80</b>  / 100</p>
+                <p> <b>15000</b>  / 100</p>
             </div>
             <div class="skills memory">
                 <div class="title_skills">
@@ -53,6 +54,8 @@
             <button>Continue</button>
         </div>
     </main>
+    
+ 
 </body>
 
 </html>
